Remove \G from perl patterns where it is not necessary; optimize check in highlight loop

--- a/src/data/def/perl.lang
+++ b/src/data/def/perl.lang
@@ -163,7 +163,7 @@
 			start = '\b(?:q|qq|qx|qw)\b'
 			%on-entry {
 				%highlight {
-					start = '\G#'
+					start = '#'
 					end = '#'
 					exit = 3
 					style = "string"
@@ -218,7 +218,7 @@
 			start = '\b(?:m|qr)\b'
 			%on-entry {
 				%highlight {
-					start = '\G#'
+					start = '#'
 					end = '#'
 					exit = 3
 					style = "string"
